--- a/TallerDeProgramacionServidor1.cbp
+++ b/TallerDeProgramacionServidor1.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Option parameters="srv" />
 				<Compiler>
+					<Add option="-std=c++11" />
 					<Add option="-g" />
 					<Add directory="ModelServidor" />
 				</Compiler>
@@ -24,6 +25,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add option="-std=c++11" />
 					<Add directory="ModelServidor" />
 				</Compiler>
 				<Linker>
@@ -32,9 +34,13 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-std=c++11" />
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Linker>
+			<Add option="-lyaml-cpp" />
+		</Linker>
 		<Unit filename="ModelServidor/Buffer.cpp" />
 		<Unit filename="ModelServidor/Buffer.h" />
 		<Unit filename="ModelServidor/Cliente.cpp" />
@@ -50,6 +56,10 @@
 		<Unit filename="Thread/Thread.h" />
 		<Unit filename="Thread/communicatingThread.cpp" />
 		<Unit filename="Thread/communicatingThread.h" />
+		<Unit filename="Utils/Util_Configuracion.cpp" />
+		<Unit filename="Utils/Util_Configuracion.h" />
+		<Unit filename="Utils/Util_ParserUsuario.cpp" />
+		<Unit filename="Utils/Util_ParserUsuario.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
